--- a/base/templates/base/department_form.html
+++ b/base/templates/base/department_form.html
@@ -13,7 +13,7 @@
                 </path>
               </svg>
             </a>
-            <h3>Create/Update Study Room</h3>
+            <h3>Create/Update Discussion Room</h3>
           </div>
         </div>
 
@@ -23,7 +23,7 @@
             {% csrf_token %}
             
             <div class="form__group">
-              <label for="room_topic">Room Topic</label>
+              <label for="room_topic">Enter a topic</label>
               <input type="text" required list="topic-list" value="{{department.topic.name}}" name="topic" />
               <datalist id="topic-list">
                 <select name="" id="room_topic">
@@ -65,8 +65,8 @@
 
 
             <div class="form__action">
-              <a class="btn btn--dark" href="index.html">Cancel</a>
-              <button class="btn btn--main" type="submit">Create Room</button>
+              <a class="btn btn--dark" href="{% url 'home' %}">Cancel</a>
+              <button class="btn btn--main" type="submit">Submit</button>
             </div>
           </form>
         </div>
