--- a/base/templates/base/edit-user.html
+++ b/base/templates/base/edit-user.html
@@ -7,7 +7,7 @@
             <div class="layout__box">
                 <div class="layout__boxHeader">
                     <div class="layout__boxTitle">
-                        <a href="{% url 'user_profile' user.id %}">
+                        <a href="{% url 'home' %}">
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
                                 viewBox="0 0 32 32">
                                 <title>arrow-left</title>
@@ -20,28 +20,32 @@
                     </div>
                 </div>
                 <div class="layout__body">
-                    <form class="form" action="#">
-                        <div class="form__group">
-                            <label for="profile_pic">Avatar</label>
+                    <form class="form" action="" method="POST" enctype="multipart/form-data">
+                        {% csrf_token %}
+<!--                         
+                        <!-- <div class="form__group">
+                            <label for="profile_pic">{{form.label}}</label>
+                            
                             <input id="profile_pic" name="profile_pic" type="file" />
-                        </div>
+                        </div> -->
+<!--                 
+            <div class="form__group">
+                <label for="username">First Name</label>
+                {{form.firstname}}
+                </div> -->
 
+                {% for field in form %}
               <div class="form__group">
-                <label for="username">Username</label>
-                <input id="username" name="username" type="text" placeholder="E.g. John doe" />
+                <label for="username">{{field.label}}</label>
+                {{field}}
               </div>
-
-              <div class="form__group">
-                <label for="email">Email</label>
-                <input id="email" name="email" type="text" placeholder="E.g. john@email.com" />
-              </div>
-
-                        <div class="form__group">
+                {% endfor %}
+                        <!-- <div class="form__group">
                             <label for="user_bio">Bio</label>
-                            <textarea name="user_bio" id="user_bio" placeholder="Write about yourself..."></textarea>
-                        </div>
+                           {{form.about}}
+                        </div> -->
                         <div class="form__action">
-                            <a class="btn btn--dark" href="index.html">Cancel</a>
+                            <a class="btn btn--dark" href="{% url 'user_profile' user.id %}">Cancel</a>
                             <button class="btn btn--main" type="submit">Update</button>
                         </div>
                     </form>
