--- a/base/templates/base/feed_component.html
+++ b/base/templates/base/feed_component.html
@@ -4,7 +4,7 @@
     <div class="roomListRoom__header">
       <a href="{% url 'user_profile' department.host.id %}" class="roomListRoom__author">
         <div class="avatar avatar--small">
-          <img src="https://randomuser.me/api/portraits/women/11.jpg" />
+          <img src="{{department.host.avatar.url}}" />
         </div>
         <span>@{{department.host.username}}</span>
       </a>
