--- a/base/templates/base/topics_component.html
+++ b/base/templates/base/topics_component.html
@@ -3,7 +3,7 @@
         <!-- Topics Start -->
         <div class="topics">
           <div class="topics__header">
-            <h2>Browse Company </h2>
+            <h2>Browse Language </h2>
           </div>
           <ul class="topics__list">
               
@@ -17,7 +17,7 @@
 
             {% endfor %}
           </ul>
-          <a class="btn btn--link" href="topics.html">
+          <a class="btn btn--link" href="{% url 'topic' %}">
             More
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
               <title>chevron-down</title>
