--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,7 +4,7 @@
     <div class="container">
       <a href="{% url 'home' %}" class="header__logo">
         <img src="{% static 'images/logo.svg' %}" />
-        <h1>JB Business Group</h1>
+        <h1>JB Developers</h1>
       </a>
       <form method="GET" class="header__search" action="{% url 'home' %}">
         <label>
@@ -20,9 +20,9 @@
       <nav class="header__menu">
         {% if request.user.is_authenticated %}
         <div class="header__user">
-          <a href="profile.html">
+          <a href="{% url 'update-user' %}">
             <div class="avatar avatar--medium active">
-              <img src="https://randomuser.me/api/portraits/men/37.jpg" />
+              <img src="{{user.avatar.url}}" />
             </div>
             <p>{{user.username}}<span>@{{user.username}}</span></p>
           </a>
@@ -43,7 +43,7 @@
 
         <!-- Logged In -->
         <div class="dropdown-menu">
-          <a href="settings.html" class="dropdown-link"
+          <a href="{% url 'update-user' %}" class="dropdown-link"
             ><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
               <title>tools</title>
               <path
